<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvChar"
        style="@style/LargeSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfo"
        style="@style/MediumSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/failure"
        app:layout_constraintBottom_toTopOf="@+id/bTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bOne"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/bFour"
        app:layout_constraintEnd_toStartOf="@+id/bTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bTwo"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/bFive"
        app:layout_constraintEnd_toStartOf="@+id/bThree"
        app:layout_constraintStart_toEndOf="@id/bOne" />

    <Button
        android:id="@+id/bThree"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/bSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bTwo" />

    <Button
        android:id="@+id/bFour"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/bSeven"
        app:layout_constraintEnd_toStartOf="@+id/bFive"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bFive"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/bEight"
        app:layout_constraintEnd_toStartOf="@+id/bSix"
        app:layout_constraintStart_toEndOf="@id/bFour" />

    <Button
        android:id="@+id/bSix"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/bNine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bFive" />

    <Button
        android:id="@+id/bSeven"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/bReset"
        app:layout_constraintEnd_toStartOf="@+id/bEight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bEight"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/bZero"
        app:layout_constraintEnd_toStartOf="@+id/bNine"
        app:layout_constraintStart_toEndOf="@id/bSeven" />

    <Button
        android:id="@+id/bNine"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/bGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bEight" />

    <Button
        android:id="@+id/bReset"
        style="@style/ButtonSupportStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bZero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bZero"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bGuess"
        app:layout_constraintStart_toEndOf="@id/bReset" />

    <Button
        android:id="@+id/bGuess"
        style="@style/ButtonSupportStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bZero" />

</androidx.constraintlayout.widget.ConstraintLayout>